deploy/k8s/center.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraudsim-center
